content and image update

--- a/_data/genuss.yml
+++ b/_data/genuss.yml
@@ -2,7 +2,7 @@
   title: Olivenöl
   page: genuss
   img: bg-img1
-  description: "Griechenland und die Früchte des Ölbaums sind untrennbar miteinander verbunden. Ob würzig oder mild, schwarz oder grün, Kalamata oder Koroneiki – eine Schale Oliven bereichert jeden gedeckten Tisch. Handwerklich hergestellte Olivenöle aus Kreta, seltene Öl-Raritäten aus Thasos und das flüssige Gold Chalkidikis zeugen von der seit Jahrtausenden anhaltenden Bedeutung der Olivenbäume, die von Attika bis Zakynthos das tägliche Mahl&nbsp;bereichern. "
+  description: "Griechenland und die Früchte des Ölbaums sind untrennbar miteinander verbunden. Ob würzig oder mild, schwarz oder grün, Kalamata oder Koroneiki – eine Schale Oliven bereichert jeden gedeckten Tisch. Handwerklich hergestellte Olivenöle aus Kreta, seltene Öl-Raritäten aus Thassos und das flüssige Gold Chalkidikis zeugen von der seit Jahrtausenden anhaltenden Bedeutung der Olivenbäume, die von Attika bis Zakynthos das tägliche Mahl&nbsp;bereichern."
 
 
 ################################################################################
@@ -31,10 +31,10 @@
 
 
 - id: four
-  title: "Wein"
+  title: "Wein und Likör"
   page: genuss
   img: bg-img4
-  description: "Das Blut der Erde, antiker Göttertrunk und Leibgetränk des Gottes Dionysos – die sagenumwobene Wirkung des griechischen Weins geht auf jahrtausendealte Erfahrung zurück. Schon in den Werken Homers als flüssiges Kulturgut gepriesen, gehören die edlen Tropfen aus Thrakien bis heute zum Standard-Portfolio jeder gut sortierten Weinkarte. Weißer Monemvasia aus Paros, edler Xinomavro aus Naoussa und kräftiger Mavrostyfo von der Peloponnes zeugen von der geschmacklichen Vielfalt griechischer Reben, die schon so manchen Genießerurlaub nachhaltig versüßt&nbsp;haben."
+  description: "Blut der Erde, Leibgetränk von Dionysos – griechischer Wein ist definitiv ein klassischer Tischbegleiter. Doch Hellas ist auch mit anderen Getränken und Spirituosen gesegnet. Aus den Resten der Weinmaische wird unter Beigabe von Anis Tsipouro bzw. Tsikoudia destilliert (besser bekannt auf Kreta unter dem Namen Raki). Anis ist neben Fenchel auch ein wichtiger Bestandteil von Ouzo, in ganz Griechenland gibt es über 300 Hersteller des aromatischen Getränkes. Etwas ungewöhnlicher und regionaler ist Kitro, nur auf Naxos aus Blättern des Zitronenbaums destilliert und der Masticha von Chios, versetzt mit Harz des&nbsp;Mastixstrauches."
 
 
 ################################################################################
