--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -1,49 +1,137 @@
-- title: Spectacular Oslo & Bergen break with optional fjord tour
-  id: spectacular-oslo-bergen-break-with-optional-fjord-tour
-  location: Scandic St. Olavs plass & Clarion Hotel Admiral, Norway
-  description: A fantastic four-night trip to Norway's Oslo and Bergen, with one of the world's most scenic train journeys between the two cities - including flights and an optional fjord tour
-  price: 459
-  price-description: per person for 4 nights
-  saved: 37
-  expires: 2020/04/14
-  link: https://www.secretescapes.com/spectacular-oslo-and-bergen-break-with-optional-fjord-tour-scandic-st-olavs-plass-and-clarion-hotel-admiral-norway-2/sale?gce_urg=0&utm_source=SE&utm_campaign=7_Norway_201703&utm_medium=Hub
+- title: Panoramablick & Suiten-Luxus auf Chalkidiki
+  location: Kappa Resort, Paliouri, Chalkidiki, Griechenland
+  description: Die griechische Sonne in Paliouri genießen – inkl. Flügen, Privattransfers & Halbpension
+  price: 599
+  price-description: pro Person basierend auf 2 Personen für 5 Nächte
+  saved: 44
+  flight-tag: true
+  expires: 2019/09/30
+  image: https://d2g6qre7voj6kv.cloudfront.net/inHousePackages/695/40b8458c_9286_49d1_92ed_79f8e024e92f.jpg?auto=format,compress
+  link: https://www.secretescapes.de/kappa-resort-paliouri-chalkidiki-griechenland-de/sale-ihp
 
-- title: Farris Bad
-  id: farris-bad
-  location: Larvik, Norway
-  description: Upscale beachfront stay at the first Nordic balneological health resort, with a supersized spa
-  price: 214
-  price-description: per room per night
-  saved: 33
-  expires: 2020/04/20
-  link: https://www.secretescapes.com/farris-bad-larvik-norway/sale?gce_urg=1&gce_scp=0&utm_source=SE&utm_medium=Hub&utm_campaign=12_Norway_201703
+- title: Last Minute in die Sonne – Kretas Norden
+  location: Theartemis Palace, Rethymno, Kreta, Griechenland
+  description: Hafenromantik und Beachlife in Rethymno – inkl. Flügen, Halbpension, Massage & Extras
+  price: 599
+  price-description: pro Person basierend auf 2 Personen für 7 Nächte
+  saved: 35
+  expires: 2019/09/30
+  flight-tag: true
+  image: https://d2g6qre7voj6kv.cloudfront.net/inHousePackages/700/8c4ead96_9005_4184_b27c_14f8998239f6.jpg?auto=format,compress
+  link: https://www.secretescapes.de/theartemis-palace-rethymno-griechenland-de/sale-ihp
 
-- title: First Hotel Marin
-  id: first-hotel-marin
-  location: Bergen, Norway
-  description: A unique stay in the centre of picturesque Bergen, just a stone's throw from the harbour
-  price: 48
-  price-description: per room per night
-  saved: 43
-  expires: 2020/04/20
-  link: https://www.secretescapes.com/first-hotel-marin-bergen-norway/sale?gce_scp=1&utm_source=SE&utm_medium=Hub&utm_campaign=13_Norway_201704
+- title: Griechischer 5*-Glanz auf Korfu
+  location: Domes Miramare, a Luxury Collection Resort, Korfu, Griechenland
+  description: Adults-only Hotel mit Privatstrand – inkl. Flügen, Privattransfers, Frühstück & Extras
+  price: 845
+  price-description: pro Person basierend auf 2 Personen für 7 Nächte
+  saved: 22
+  flight-tag: true
+  expires: 2019/10/07
+  image: https://d2g6qre7voj6kv.cloudfront.net/inHousePackages/241/851669ef_c512_4702_a42a_cf249df4bdef.jpg?auto=format,compress
+  link: https://www.secretescapes.de/griechischer-5-star-glanz-auf-korfu-domes-miramare-corfu-moraitika-korfu-griechenland-2/sale-ihp
 
-- title: Magic Hotel
-  id: magic-hotel
-  location: Bergen, Norway
-  description: A brand-new hip hotel in the centre of Bergen, designed by a top New York designer
-  price: 73
-  price-description: per room per night
-  saved: 55
-  expires: 2020/04/20
-  link: https://www.secretescapes.com/magic-hotel-bergen-norway/sale?gce_hpf=1&utm_source=SE&utm_medium=Hub&utm_campaign=14_Norway_201704
+- title: Zauberhaftes Strandresort auf Kreta
+  location: The Royal Blue – A Luxury Beach Resort, Rethymno, Kreta, Griechenland
+  description: Luxus am Privatstrand in Panormos – inkl. Flügen, Privattransfers & Halbpension
+  price: 699
+  price-description: pro Person basierend auf 2 Personen für 7 Nächte
+  saved: 27
+  flight-tag: true
+  expires: 2019/10/07
+  image: https://d2g6qre7voj6kv.cloudfront.net/inHousePackages/180/d4b6d2b4_b9a9_4c01_9a05_84705520864e.jpg?auto=format,compress
+  link: https://www.secretescapes.de/royal-blue-geropotamou-griechenland/sale-ihp
 
-- title: Sola Strand Hotel
-  id: sola-strand-hotel
-  location: Sola, Norway
-  description: Discover one of the world's sixth best beaches on Norway's gorgeous coast, with breakfast and more
+- title: Sonnenauszeit auf der griechischen Insel Kos
+  location: Diamond Deluxe Hotel, Kos, Griechenland
+  description: Elegantes 5*-Refugium – inkl. Flügen, Halbpension, Transfers & Extras
+  price: 599
+  price-description: pro Person basierend auf 2 Personen für 7 Nächte
+  saved: 29
+  flight-tag: true
+  expires: 2019/10/07
+  image: https://d2g6qre7voj6kv.cloudfront.net/inHousePackages/455/fa6ae2aa_2c25_489f_a3d5_78af2ae5418e.jpg?auto=format,compress
+  link: https://www.secretescapes.de/sonnenauszeit-auf-der-griechischen-insel-kos-diamond-deluxe-hotel-kos-suedliche-agaeis-griechenland-de/sale-ihp
+
+
+- title: Traumhafte Sonnentage auf Thassos
+  location: Ilio Mare Resort Hotel, Skala Prinos, Thassos, Griechenland
+  description: Sonne satt in Griechenland – inkl. Flügen, Privattransfers, Halbpension & Extras
+  price: 485
+  price-description: pro Person basierend auf 2 Personen für 7 Nächte
+  saved: 42
+  flight-tag: true
+  expires: 2019/09/30
+  image: https://d2g6qre7voj6kv.cloudfront.net/sales/100734/eea0f942_239b_4152_b0ec_a0296f34c40d.jpg?auto=format,compress
+  link: https://www.secretescapes.de/traumhafte-sonnentage-auf-thassos-ilio-mare-resort-hotel-skala-prinos-thassos-griechenland/sale
+
+- title: Pure Erholung & Weitblick in Athen
+  location: Grand Hyatt Athens, Athen, Griechenland
+  description: Mondäner 5*-Lifestyle zwischen City & Hafen – inkl. Frühstück & 1 Flasche Wein
+  price: 115
+  price-description: pro Unterkunft pro Nacht
+  saved: 50
+  expires: 2019/09/30
+  image: https://d2g6qre7voj6kv.cloudfront.net/sales/98389/2942a0bd_60a6_4cd6_a348_c48c008765e9.jpg?auto=format,compress
+  link: https://www.secretescapes.de/pure-erholung-and-weitblick-in-athen-grand-hyatt-athens-athen-griechenland/sale
+
+- title: All-inclusive-Auszeit auf Kos
+  location: Ammos Resort, Mastichari, Kos, Südliche Ägäis, Griechenland
+  description: Strandresort inkl. All-inclusive, Begrüßungsgetränk & Nutzung von Liegen mit Sonnenschirm
+  price: 69
+  price-description: pro Zimmer pro Nacht
+  saved: 61
+  expires: 2019/10/07
+  image: https://d2g6qre7voj6kv.cloudfront.net/sales/42357/abe8bcc6_94b6_4839_9e81_42cdbf337a3a.jpg?auto=format,compress
+  link: https://www.secretescapes.de/all-inclusive-auszeit-auf-kos-ammos-resort-mastichari-kos-suedliche-agaeis-griechenland-0/sale
+
+- title: Griechischer Inseltraum auf Santorini
+  location: Santorini Dreams Villas, Pirgos, Santorini, Griechenland
+  description: Inselperle Santorini – inkl. Frühstück, Begrüßungsgetränk, 1 Flasche Wein & 1 Obstkorb
+  price: 266
+  price-description: pro Suite pro Nacht
+  saved: 51
+  expires: 2019/10/07
+  image: https://d2g6qre7voj6kv.cloudfront.net/sales/101835/fb0ab545_1532_4eef_ba76_fc335e631ed8.jpg?auto=format,compress
+  link: https://www.secretescapes.de/griechischer-inseltraum-auf-santorini-santorini-dreams-villas-pirgos-santorini-griechenland/sale
+
+
+- title: Chalkidiki zwischen Strand & wilder Natur
+  location: Xenia Ouranoupoli, Chalkidiki, Griechenland
+  description: Griechische Idylle – inkl. Halbpension, Begrüßungscocktail & Massage
+  price: 77
+  price-description: pro Zimmer pro Nacht
+  saved: 51
+  expires: 2019/10/07
+  image: https://d2g6qre7voj6kv.cloudfront.net/sales/101950/58e68798_1fa3_4283_8be6_0819de22c9b7.jpg?auto=format,compress
+  link: https://www.secretescapes.de/chalkidiki-zwischen-strand-and-wilder-natur-xenia-ouranoupoli-chalkidiki-griechenland/sale
+
+- title: Griechische Inselperle im Mittelmeer
+  location: Contessina Hotel, Tsilivì, Zakynthos, Griechenland
+  description: Griechische Sonne und moderner Komfort – inkl. Frühstück, Willkommensgeschenk & Extras
   price: 79
-  price-description: per room per night
-  saved: 47
-  expires: 2020/04/20
-  link: https://www.secretescapes.com/sola-strand-hotel-sola-norway/sale?gce_hpf=1&utm_source=SE&utm_medium=Hub&utm_campaign=15_Norway_201704
+  price-description: pro Unterkunft pro Nacht
+  saved: 56
+  expires: 2019/10/07
+  image: https://d2g6qre7voj6kv.cloudfront.net/sales/102045/69cf985b_3774_4671_9560_d57f91435ef6.jpg?auto=format,compress
+  link: https://www.secretescapes.de/griechische-inselperle-im-mittelmeer-contessina-hotel-tsilivi-zakynthos-griechenland-de/sale
+
+- title: Griechischer Inseltraum auf Kreta
+  location: SENTIDO Vasia Resort & Spa, Sisi, Kreta, Griechenland
+  description: Erholen & Sonne tanken – inkl. All-inclusive
+  price: 80
+  price-description: pro Zimmer pro Nacht
+  saved: 27
+  expires: 2019/10/07
+  image: https://d2g6qre7voj6kv.cloudfront.net/sales/102188/8c59b9eb_42a5_4a68_8715_333d292375a1.jpg?auto=format,compress
+  link: https://www.secretescapes.de/sentido-vasia-resort-and-spa-crete-greek-islands/sale
+
+- title: Exclusives All-inclusive-Resort auf Rhodos
+  location: Electra Palace Rhodes, Ialyssos, Rhodos, Griechenland
+  description: Superior-Zimmer o. Familien-Suite mit Gourmetverpflegung, Privatstrand & Spa
+  price: 110
+  price-description: pro Unterkunft pro Nacht
+  saved: 43
+  expires: 2019/10/07
+  image: https://d2g6qre7voj6kv.cloudfront.net/sales/98453/f4b48af5_bbf6_4c14_8982_da4a1d8a2f0a.jpg?auto=format,compress
+  link: https://www.secretescapes.de/exclusives-all-inclusive-resort-auf-rhodos-electra-palace-rhodes-ialyssos-rhodos-griechenland-beach/sale
