--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Griechenland
 client:
   name: Ein Kosmos voller Sehnsuchtsorte
   link: "http://www.visitgreece.gr/"
-core-se-link: https://www.secretescapes.de/aktuelle-angebote?utm_source=SE&utm_medium=hub&utm_campaign=griechenland_DE_19
+core-se-link: https://www.secretescapes.de/aktuelle-angebote
 description: >
   Malerische Inselwelten, antike Kulturschätze, pittoreske Tavernen – die Heimat der Götter ist seit jeher ein Garant für mediterrane Sternstunden.
 
